--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 	text-align:center;
+	background-color:rgb(255,255,255);
 }
 
 
@@ -41,4 +42,12 @@ body {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
+    cursor: pointer;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    margin:15px;
 }
