add skeleton sinatra server to serve js files on heroku

--- a/views/ducks.erb
+++ b/views/ducks.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="./style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -36,9 +36,9 @@
 
 
 
-	<script type="text/javascript" src="jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="http://jqueryrotate.googlecode.com/svn/trunk/jQueryRotate.js"></script>
-	<script type="text/javascript" src="ducks.js"></script>
+	<script type="text/javascript" src="js/ducks.js"></script>
 </body>
 </html>
 
