change jqueryrotate libraby to load over https so heroku doesnt block it

--- a/views/ducks.erb
+++ b/views/ducks.erb
@@ -37,7 +37,7 @@
 
 
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="http://jqueryrotate.googlecode.com/svn/trunk/jQueryRotate.js"></script>
+	<script type="text/javascript" src="https://jqueryrotate.googlecode.com/svn/trunk/jQueryRotate.js"></script>
 	<script type="text/javascript" src="js/ducks.js"></script>
 </body>
 </html>
